--- a/app/views/personal_data/_personal_datum.html.erb
+++ b/app/views/personal_data/_personal_datum.html.erb
@@ -11,7 +11,7 @@
 
   <div class="flex flex-row gap-3">
     <div class="my-1 w-1/3">
-      <strong class="font-semibold text-sm text-slate-700">ИНН:</strong>
+      <strong class="font-semibold text-sm text-slate-700 copytext">ИНН:</strong>
     </div>
     <div class="my-1 w-2/3">
       <%= personal_datum.inn %>
