--- a/app/views/certificates/index.html.erb
+++ b/app/views/certificates/index.html.erb
@@ -30,18 +30,19 @@
             <%= submit_tag "Filter", class:"rounded-lg cursor-pointer py-2 px-3 bg-gradient-to-b from-blue-400 to-blue-500 text-white font-medium w-full" %>
           </div>
         <% end %>
-        <div class="grid grid-cols-4 gap-3 ">
+        
+        <div class="flex items-center justify-end">
           <%= button_to certificates_path, 
                                 method: :get, 
-                                class: "rounded-lg 
+                                class: " 
                                         justify-center
                                         inline-flex items-center
-                                        #{"active" if current_page?(certificates_path) && !params[:legal_entity] && !params[:status]} 
+                                        #{ request.fullpath == certificates_path ? "bg-gray-200 shadow-inner" : "bg-gradient-to-b from-gray-100 to-gray-200" } 
                                         border 
                                         cursor-pointer 
                                         py-2 px-3 
-                                        bg-gradient-to-b from-gray-100 to-gray-200 
-                                        font-sm 
+                                        rounded-l
+                                        text-xs 
                                         w-full" do %>
             <span>ВСЕ</span>
             <span class="bg-gray-400 text-white rounded-full h-6 px-2 flex items-center ml-2"><%= Certificate.all.count %></span>
@@ -49,18 +50,51 @@
           <%= button_to certificates_path, 
                               params: {legal_entity: true}, 
                               method: :get, 
-                              class: "rounded-lg #{"active" if params[:legal_entity]} 
+                              class: "#{ params[:legal_entity] ? "bg-gray-200 shadow-inner" : "bg-gradient-to-b from-gray-100 to-gray-200"} 
                                       justify-center
                                       inline-flex items-center
                                       border 
                                       cursor-pointer 
                                       py-2 
                                       px-3 
-                                      bg-gradient-to-b from-gray-100 to-gray-200 
-                                      font-sm 
+                                      text-xs
+                                       
                                       w-full" do %>
             <span>ЮЛ</span>
             <span class="bg-gray-400 text-white rounded-full h-6 px-2 flex items-center ml-2"><%= Certificate.select_legal_entity.count %></span>
+          <% end %>
+          <%= button_to certificates_path, 
+                              params: {one_months_left: true}, 
+                              method: :get, 
+                              class: "#{ params[:one_months_left] ? "bg-gray-200 shadow-inner" : "bg-gradient-to-b from-gray-100 to-gray-200"} 
+                                      justify-center
+                                      inline-flex items-center
+                                      border 
+                                      cursor-pointer 
+                                      py-2 
+                                      px-3 
+                                       
+                                      text-xs
+                                      w-full" do %>
+            <span>Меньше месяца</span>
+            <span class="bg-gray-400 text-white rounded-full h-6 px-2 flex items-center ml-2"><%= Certificate.one_months_left_counter %></span>
+          <% end %>
+
+          <%= button_to certificates_path, 
+                              params: {two_months_left: true}, 
+                              method: :get, 
+                              class: "#{ params[:two_months_left] ? "bg-gray-200 shadow-inner" : "bg-gradient-to-b from-gray-100 to-gray-200"} 
+                                      justify-center
+                                      inline-flex items-center
+                                      border 
+                                      cursor-pointer 
+                                      py-2 
+                                      px-3 
+                                      rounded-r
+                                      text-xs
+                                      w-full" do %>
+            <span>Меньше 2-x месяца</span>
+            <span class="bg-gray-400 text-white rounded-full h-6 px-2 flex items-center ml-2"><%= Certificate.two_months_left_counter %></span>
           <% end %>
         </div>
       </fieldset>
