--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -9,32 +9,39 @@
     </div>
   </div>
 
-  <div id="employees" class="min-w-full" data-controller="search">
+  <div id="employees" data-controller="search">
     <input data-search-target="source" 
                 data-action="input->search#filter" 
                 type="text" 
-                class="search" 
+                class="search mb-6" 
                 placeholder="search.." />
-    <%= render @employees %>
+    <div class="flex flex-wrap -m-2">
+      <%= render @employees %>
+    </div>
+    
     <div class="my-5"><%== pagy_nav(@pagy) %></div>
   </div>
 
-  <div class="mb-3"> <!-- Employee import -->
-    <%= form_tag import_employees_path, multipart: true do %>
-    <div class="col input-group">
-      <%= file_field_tag :file, class: "form-control" %>
-    </div>
-    <%= submit_tag "Импортировать", class: "btn btn-sm default-btn" %>
-    <% end %>
-  </div> <!-- Employee import -->
+  <details>
+    <summary>import</summary>
 
-  <div class="mb-3"> <!-- PersonalDatum import -->
-    <h3>PersonalDatum import</h3>
-    <%= form_tag pesonal_data_import_path, multipart: true do %>
-    <div class="col input-group">
-      <%= file_field_tag :file, class: "form-control" %>
-    </div>
-    <%= submit_tag "Импортировать", class: "btn btn-sm default-btn" %>
-    <% end %>
-  </div> <!-- PersonalDatum import -->
+    <div class="mb-3"> <!-- Employee import -->
+      <%= form_tag import_employees_path, multipart: true do %>
+      <div class="col input-group">
+        <%= file_field_tag :file, class: "form-control" %>
+      </div>
+      <%= submit_tag "Импортировать", class: "btn btn-sm default-btn" %>
+      <% end %>
+    </div> <!-- Employee import -->
+
+    <div class="mb-3"> <!-- PersonalDatum import -->
+      <h3>PersonalDatum import</h3>
+      <%= form_tag pesonal_data_import_path, multipart: true do %>
+      <div class="col input-group">
+        <%= file_field_tag :file, class: "form-control" %>
+      </div>
+      <%= submit_tag "Импортировать", class: "btn btn-sm default-btn" %>
+      <% end %>
+    </div> <!-- PersonalDatum import -->
+  </details>
 </div>
