--- a/app/views/certificates/index.html.erb
+++ b/app/views/certificates/index.html.erb
@@ -5,17 +5,7 @@
       <h1 class="font-bold text-stone-700 text-3xl">Сертификаты</h1>
     </div>
 
-    <div class="mb-3"> <!-- Certificates import -->
-      <h3>Certificates import</h3>
-      <%= form_tag certificates_import_path, multipart: true do %>
-      <div class="col input-group">
-        <%= file_field_tag :file, class: "form-control" %>
-      </div>
-      <%= submit_tag "Импортировать", class: "btn btn-sm default-btn" %>
-      <% end %>
-    </div> <!-- Certificates import -->
-
-    <div class="w-1/4">
+    <div class="w-1/3">
       <fieldset class="p-3 border">
         <legend>Фильтры</legend>
         <%= form_tag certificates_path, class: "grid grid-cols-4 gap-3 w-full mb-3", method: :get do %>
@@ -24,10 +14,10 @@
                             options_for_select(Certificate.status.values.map{ |s| [I18n.t(s, locale: :ru), s] }, 
                             selected: params[:status]), 
                             include_blank: true, 
-                            class: "shadow rounded-md border border-gray-200 outline-none px-3 py-2 w-full" %>
+                            class: "shadow rounded-md border border-gray-200 outline-none px-3 py-1 w-full" %>
           </div>
           <div class="col-span-1">
-            <%= submit_tag "Filter", class:"rounded-lg cursor-pointer py-2 px-3 bg-gradient-to-b from-blue-400 to-blue-500 text-white font-medium w-full" %>
+            <%= submit_tag "Filter", class:"rounded-lg cursor-pointer py-1 px-3 bg-gradient-to-b from-blue-400 to-blue-500 text-white font-medium w-full" %>
           </div>
         <% end %>
         
@@ -105,4 +95,17 @@
     <%= render "certificate_all", certificates: @certificates %>
   </div>
   <div class="my-5"><%== pagy_nav(@pagy) if @pagy.present? %></div>
+
+  <details>
+    <summary>Import</summary>
+    <div class="mb-3"> <!-- Certificates import -->
+      <h3>Certificates import</h3>
+      <%= form_tag certificates_import_path, multipart: true do %>
+      <div class="col input-group">
+        <%= file_field_tag :file, class: "form-control" %>
+      </div>
+      <%= submit_tag "Импортировать", class: "btn btn-sm default-btn" %>
+      <% end %>
+    </div> <!-- Certificates import -->
+  </details>
 </div>
