--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -41,33 +41,33 @@
 </div>
 <h1>Kanban Board</h1>
 
-<div class="kanban-board" data-controller="tasks">
-  <div class="tasks-group" data-status="0" data-action="dragover->tasks#allowdrop drop->tasks#drop">
-    <h2>Backlog</h2>
+<div class="flex container" data-controller="tasks">
+  <div class="w-1/3" data-status="0" data-action="dragover->tasks#allowdrop drop->tasks#drop">
+    <h2 class="text-xl font-bold text-red-700">Backlog</h2>
     <% @tasks.where(status: 0).each do |task| %>
       <div class="task" data-tasks-target="task" data-id="<%= task.id %>" data-status="<%= task.status %>" draggable="true" data-action="dragstart->tasks#dragstart dragend->tasks#dragend">
         <h3><%= task.name %></h3>
-        <p><%= task.description %></p>
+        <p class="text-sm text-gray-500"><%= task.description %></p>
       </div>
     <% end %>
   </div>
 
-  <div class="tasks-group" data-status="1" data-action="dragover->tasks#allowdrop drop->tasks#drop">
-    <h2>In Progress</h2>
+  <div class="w-1/3" data-status="1" data-action="dragover->tasks#allowdrop drop->tasks#drop">
+    <h2 class="text-xl font-bold text-yellow-700">In Progress</h2>
     <% @tasks.where(status: 1).each do |task| %>
       <div class="task" data-tasks-target="task" data-id="<%= task.id %>" data-status="<%= task.status %>" draggable="true" data-action="dragstart->tasks#dragstart dragend->tasks#dragend">
         <h3><%= task.name %></h3>
-        <p><%= task.description %></p>
+        <p class="text-sm text-gray-500"><%= task.description %></p>
       </div>
     <% end %>
   </div>
 
-  <div class="tasks-group" data-status="2" data-action="dragover->tasks#allowdrop drop->tasks#drop">
-    <h2>Completed</h2>
+  <div class="w-1/3" data-status="2" data-action="dragover->tasks#allowdrop drop->tasks#drop">
+    <h2 class="text-xl font-bold text-green-700">Completed</h2>
     <% @tasks.where(status: 2).each do |task| %>
       <div class="task" data-tasks-target="task" data-id="<%= task.id %>" data-status="<%= task.status %>" draggable="true" data-action="dragstart->tasks#dragstart dragend->tasks#dragend">
-        <h3><%= task.name %></h3>
-        <p><%= task.description %></p>
+        <h3 class="text-gray-900 font-bold"><%= task.name %></h3>
+        <p class="text-sm text-gray-500"><%= task.description %></p>
       </div>
     <% end %>
   </div>
