--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -142,3 +142,23 @@ button.active {
 .filter--notFound {
   display: none;
 }
+
+.scrollbar::-webkit-scrollbar {
+  width: 8px;
+}
+.scrollbar::-webkit-scrollbar-track {
+  background: #f9fafb;
+}
+.scrollbar::-webkit-scrollbar-thumb {
+  background-color: #e2e8f0;
+  border-radius: 10px;
+}
+
+.gradient-scroll {
+  position: relative;
+  bottom:50px;
+  left:0px;
+  width:100%;
+  height:50px;
+  background: linear-gradient(to bottom,  rgba(255, 255, 255, 0) 0%,rgb(255, 255, 255) 100%); /* W3C */
+}
