--- a/app/views/departments/_form.html.erb
+++ b/app/views/departments/_form.html.erb
@@ -16,6 +16,6 @@
   </div>
 
   <div class="inline">
-    <%= form.submit "Добавить", class: "rounded-lg py-2 px-3 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
+    <%= form.submit "Добавить", class: "rounded-lg py-2 px-3 hover:bg-orange-300 bg-orange-400 hover:shadow text-white inline-block font-medium cursor-pointer" %>
   </div>
 <% end %>
