--- a/app/views/personal_data/_personal_datum.html.erb
+++ b/app/views/personal_data/_personal_datum.html.erb
@@ -1,8 +1,8 @@
-<div id="<%= dom_id personal_datum %>" class="bg-sky-50 rounded-lg p-5 shadow">
+<div id="<%= dom_id personal_datum %>" class="bg-white xl:w-3/4 md:w-1/2 w-full h-full p-6 rounded-lg border-2 border-blue-200 relative overflow-hidden">
 
   <div class="flex flex-row gap-3">
     <div class="my-1 w-1/3">
-      <strong class="font-semibold text-sm text-slate-700">СНИЛС:</strong>
+      <strong class="font-semibold text-sm text-slate-500">СНИЛС:</strong>
     </div>
     <div class="my-1 w-2/3">
       <%= personal_datum.snils %>
@@ -11,7 +11,7 @@
 
   <div class="flex flex-row gap-3">
     <div class="my-1 w-1/3">
-      <strong class="font-semibold text-sm text-slate-700 copytext">ИНН:</strong>
+      <strong class="font-semibold text-sm text-slate-500 copytext">ИНН:</strong>
     </div>
     <div class="my-1 w-2/3">
       <%= personal_datum.inn %>
@@ -20,7 +20,7 @@
 
   <div class="flex flex-row gap-3">
     <div class="my-1 w-1/3">
-      <strong class="font-semibold text-sm text-slate-700">Паспорт:</strong>
+      <strong class="font-semibold text-sm text-slate-500">Паспорт:</strong>
     </div>
     <div class="my-1 w-2/3">
       <%= personal_datum.passport_s %> <%= personal_datum.passport_n %>
@@ -29,7 +29,7 @@
 
   <div class="flex flex-row gap-3">
     <div class="my-1 w-1/3">
-      <strong class="font-semibold text-sm text-slate-700">Выдан:</strong>
+      <strong class="font-semibold text-sm text-slate-500">Выдан:</strong>
     </div>
     <div class="my-1 w-2/3">
       <%= personal_datum.issued_by_all %>
@@ -38,7 +38,7 @@
 
   <div class="flex flex-row gap-3">
     <div class="my-1 w-1/3">
-      <strong class="font-semibold text-sm text-slate-700">Дата рождения:</strong>
+      <strong class="font-semibold text-sm text-slate-500">Дата рождения:</strong>
     </div>
     <div class="my-1 w-2/3">
       <%= personal_datum.date_of_birth.strftime("%d.%m.%Y") %>
@@ -47,7 +47,7 @@
 
   <div class="flex flex-row gap-3">
     <div class="my-1 w-1/3">
-      <strong class="font-semibold text-sm text-slate-700">Место рождения:</strong>
+      <strong class="font-semibold text-sm text-slate-500">Место рождения:</strong>
     </div>
     <div class="my-1 w-2/3">
       <%= personal_datum.place_of_birth %>
@@ -56,7 +56,7 @@
 
   <div class="flex flex-row gap-3">
     <div class="my-1 w-1/3">
-      <strong class="font-semibold text-sm text-slate-700">Телефон:</strong>
+      <strong class="font-semibold text-sm text-slate-500">Телефон:</strong>
     </div>
     <div class="my-1 w-2/3">
       <%= personal_datum.phone_number %>
@@ -65,7 +65,7 @@
 
   <div class="flex flex-row gap-3 mb-3">
     <div class="my-1 w-1/3">
-      <strong class="font-semibold text-sm text-slate-700">Email:</strong>
+      <strong class="font-semibold text-sm text-slate-500">Email:</strong>
     </div>
     <div class="my-1 w-2/3">
       <%= personal_datum.email %>
