--- a/app/views/certificates/_form.html.erb
+++ b/app/views/certificates/_form.html.erb
@@ -49,6 +49,6 @@
   </div>
 
   <div class="inline">
-    <%= form.submit "Добавить", class: "rounded-lg py-2 px-3 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
+    <%= form.submit "Добавить", class: "rounded-lg py-2 px-3 bg-indigo-400 hover:bg-indigo-500 text-white inline-block font-medium cursor-pointer transition" %>
   </div>
 <% end %>
