--- a/app/views/certificates/index.html.erb
+++ b/app/views/certificates/index.html.erb
@@ -17,7 +17,7 @@
                             class: "shadow rounded-md border border-gray-200 outline-none px-3 py-1 w-full" %>
           </div>
           <div class="col-span-1">
-            <%= submit_tag "Filter", class:"rounded-lg cursor-pointer py-1 px-3 bg-gradient-to-b from-blue-400 to-blue-500 text-white font-medium w-full" %>
+            <%= submit_tag "Filter", class:"rounded-lg cursor-pointer py-1 px-3 bg-gradient-to-b from-indigo-300 to-indigo-400 text-white font-medium w-full" %>
           </div>
         <% end %>
         
