--- a/app/views/personal_data/edit.html.erb
+++ b/app/views/personal_data/edit.html.erb
@@ -3,5 +3,5 @@
 
   <%= render "form", personal_datum: @personal_datum %>
 
-  <%= link_to "Назад", employee_path(@employee), class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+  <%= link_to "Назад", employee_path(@employee), class: "ml-2 rounded-lg py-2 px-3 bg-gray-100 hover:bg-gray-200 inline-block font-medium" %>
 </div>
