--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -162,3 +162,20 @@ button.active {
   height:50px;
   background: linear-gradient(to bottom,  rgba(255, 255, 255, 0) 0%,rgb(255, 255, 255) 100%); /* W3C */
 }
+
+
+.fade-in-down {
+  animation: fadeInDown 0.5s ease 0s 1 normal forwards;
+}
+
+@keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    transform: translateY(-50px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
