--- a/app/views/certificates/new.html.erb
+++ b/app/views/certificates/new.html.erb
@@ -2,6 +2,6 @@
   <fieldset class="border border-solid shadow rounded-lg border-gray-300 p-5">
     <legend class="font-bold px-3">Добавление сертификата</legend>
     <%= render "shared/modal", model: @certificate, title: "Добавление сертификата" %>
-    <%= link_to 'Back to certificates', certificates_path, class: "ml-2 rounded-lg py-2 px-3 bg-gray-100 inline-block font-medium" %>
+    <%= link_to 'Back to certificates', certificates_path, class: "ml-2 rounded-lg py-2 px-3 bg-gray-100 hover:bg-gray-200 inline-block font-medium" %>
   <fieldset>
 </div>
