--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -1,8 +1,8 @@
-<div class="w-2/4">
+<div class="lg:w-2/4 md:w-full">
   <div class="flex justify-between border items-center bg-white px-8 py-3 rounded">
     <h1 class="font-bold text-gray-600 text-2xl">Список отделений</h1>
     <div class="flex justify-center">
-      <%= link_to new_department_path, data: { turbo_frame: 'modal' }, class: "block rounded btn-circle px-3 py-2 bg-blue-500 text-white " do %>
+      <%= link_to new_department_path, data: { turbo_frame: 'modal' }, class: "block rounded btn-circle px-3 py-2 bg-indigo-400 text-white " do %>
         <i class="fa-solid fa-plus font-bold"></i>
       <% end %>
     </div>
@@ -11,7 +11,7 @@
   <div class="min-w-full mt-3" data-controller="search">
     <input data-remote='true' data-search-target="source" 
               data-action="input->search#filter" 
-              type="text" 
+              type="search" 
               class="search border border-gray-200 rounded" 
               placeholder="Поиск.." />
     <div id="departments" class="bg-white scrollbar border p-8 mt-3 rounded h-[60vh] overflow-auto" data-controller="menu" data-search-target="results">
