--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -1,7 +1,7 @@
 <% if notice.present? %>
   <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
 <% end %>
-<div class="mx-auto w-1/3">
+<div class="mx-auto w-1/3" data-controller="menu">
   <div class="mx-auto">
     <%= render @department %>
     </br>
