--- a/app/views/employees/_employee.html.erb
+++ b/app/views/employees/_employee.html.erb
@@ -1,6 +1,6 @@
 <div id="<%= dom_id employee %>" class="p-2 lg:w-1/3 md:w-1/2 w-full max-h-40" data-controller="menu" data-search-target="filterable" data-search-key='<%= "#{employee.name_with_initial}".downcase %>'>
-  <div class="hover:shadow-lg transition h-full flex items-center bg-white border-blue-200 border p-4 rounded-lg">
-    <div class="flex w-16 h-16 bg-blue-50 justify-center font-bold border border-white items-center flex-shrink-0 rounded-full mr-4"><span class="text-blue-500"><%= employee.initials %></span></div>
+  <div class="hover:shadow-lg transition h-full flex items-center bg-white border-indigo-200 border p-4 rounded-lg">
+    <div class="flex w-16 h-16 bg-indigo-50 justify-center font-bold border border-white items-center flex-shrink-0 rounded-full mr-4"><span class="text-indigo-400"><%= employee.initials %></span></div>
     <div class="flex-grow">
       <h2 class="text-gray-900 title-font font-medium"><%= link_to employee.name_with_initial, employee %></h2>
       <p class="text-gray-500"><%= employee.positions.first.name if employee.positions.present? %></p>
