--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -50,7 +50,7 @@
           <div class="grid justify-items-center">
             <div class="mb-6 text-lg">Нет данных</div>
             <div>
-              <%= link_to 'Добавить персональные данные', new_employee_personal_datum_path(@employee), class: "rounded-lg py-2 px-3 bg-blue-400 hover:bg-blue-400 font-medium" %>
+              <%= link_to 'Добавить персональные данные', new_employee_personal_datum_path(@employee), class: "rounded-lg py-2 px-3 bg-indigo-400 text-white hover:bg-indigo-500 font-medium" %>
             </div>
           </div>
         <% end %>
@@ -58,7 +58,7 @@
 
       <div class="tab-content-item p-5 fade-in" data-tabs-target="tabContentItem" data-tab-id="2" hidden>
         <div class="flex justify-center p-5">
-          <%= link_to new_employee_certificate_path(@employee), data: { turbo_frame: 'modal' }, class: "rounded-lg btn-circle py-2 px-3 bg-blue-400 text-white " do %>
+          <%= link_to new_employee_certificate_path(@employee), data: { turbo_frame: 'modal' }, class: "rounded-lg btn-circle py-2 px-3 bg-indigo-400 text-white " do %>
             <i class="fa-solid fa-plus font-bold"></i>
           <% end %>
         </div>
@@ -84,7 +84,7 @@
 
       <div class="tab-content-item p-5 fade-in w-full lg:w-1/2" data-tabs-target="tabContentItem" data-tab-id="3" hidden>
         <div class="flex justify-center p-5">
-          <%= link_to new_employee_employee_position_path(@employee), data: { turbo_frame: 'modal' }, class: "rounded-lg btn-circle py-2 px-3 bg-blue-400 text-white " do %>
+          <%= link_to new_employee_employee_position_path(@employee), data: { turbo_frame: 'modal' }, class: "rounded-lg btn-circle py-2 px-3 bg-indigo-400 text-white " do %>
             <i class="fa-solid fa-plus font-bold"></i>
           <% end %>
         </div>
