--- a/app/views/personal_data/_form.html.erb
+++ b/app/views/personal_data/_form.html.erb
@@ -79,6 +79,6 @@
   </div>
 
   <div class="inline">
-    <%= form.submit "Подтвердить", class: "rounded-lg py-2 px-3 bg-blue-600 hover:bg-blue-500 text-white inline-block font-medium cursor-pointer" %>
+    <%= form.submit "Подтвердить", class: "rounded-lg py-2 px-3 bg-indigo-400 hover:bg-indigo-500 text-white inline-block font-medium cursor-pointer transition" %>
   </div>
 <% end %>
