--- a/app/views/personal_data/_personal_datum.html.erb
+++ b/app/views/personal_data/_personal_datum.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id personal_datum %>" class="bg-white xl:w-3/4 md:w-1/2 w-full h-full p-6 rounded-lg border-2 border-blue-200 relative overflow-hidden">
+<div id="<%= dom_id personal_datum %>" class="bg-white xl:min-w-full md:min-w-full h-full p-6 rounded-lg border-2 border-indigo-200 relative overflow-hidden">
 
   <div class="flex flex-row gap-3">
     <div class="my-1 w-1/3">
